@@ -13,7 +13,6 @@ require 'digest/sha1'
 require 'rcap/version'
 require 'rcap/utilities'
 require 'rcap/validations'
-require 'rcap/alert'
 require 'rcap/cap_1_0/alert'
 require 'rcap/cap_1_0/parameter'
 require 'rcap/cap_1_0/event_code'
@@ -44,5 +43,6 @@ require 'rcap/cap_1_2/circle'
 require 'rcap/cap_1_2/polygon'
 require 'rcap/cap_1_2/geocode'
 require 'rcap/cap_1_2/area'
+require 'rcap/alert'
 # Configuration
 require 'config'
